--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,15 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+F_12/Logs/
+
+F_12/Temp/
+
+F_12/UserSettings/
+
+F_12/Library/
+
+F_12/ProjectSettings/
+
+F_12/Packages/
